very minor changes

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -11,20 +11,20 @@
 <h4>Deeksha is <p id="id1"><input type="button" onclick="document.getElementById('id1').innerHTML = 'amazing'">
 </button>u tell</p></h4>
 
-<h4>Today is  <p id="id2"><input type="button" onclick="document.getElementById('id2').innerHTML = '9 navratras'">
+<h4>Today is :- <p id="id2"><input type="button" onclick="document.getElementById('id2').innerHTML = '9 navratras'">
 </button>u tell</p></h4>
 
-<h4>Date is <p id="id3"><input type="button" onclick="document.getElementById('id3').innerHTML = Date()">
+<h4>So, Date is <p id="id3"><input type="button" onclick="document.getElementById('id3').innerHTML = Date()">
 </button>u tell</p></h4>
 
-<h4>Be careful <p id="id4"><input type="button" onclick="alert('Hello world!')">
+<h4>Hey! Be careful <p id="id4"><input type="button" onclick="alert('Hello world!')">
 </button></p></h4>
 
 <h4>Changing content <p id="id5"> Dikz is gr8 </p> </h4><input type="button" onclick="dik_function()">
 <script>
   function dik_function() {
   	var x = document.getElementById('id5').innerHTML
-  	x.style.fontSize = "25px";           
-    x.style.color = "red"; 
+  	x.style.fontSize = "25px";
+    x.style.color = "red";
 }
 </script>
