--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>
 	Welcome to Our app
-	<small> Please login to create your playlists </small>
+	<small> Please login to create your playlists. </small>
 	</h1>
-	
+
 	<%=render "form"%>
