--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>
 	Welcome to Our app
 	<small> Please login here to create your playlists. </small>
+	<small> Welcome </small>
 	</h1>
 
 	<%=render "form"%>
